# Deepeval

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  env.example  pyproject.toml  uv.toml
.github/: CODEOWNERS  chatgpt-indexing-trigger.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: import-deepeye.yml
docker/: Dockerfile.backend  Dockerfile.dashboard  Dockerfile.frontend  Dockerfile.sandbox  Dockerfile.video-preview  nginx.conf
docker/scripts/: init-multiple-dbs.sh
docker/test-db/: retail_ops_init.sql
docker/video-preview-app/: index.html  package-lock.json  package.json  start.sh  tsconfig.json  vite.config.ts
docker/video-preview-app/src/: App.tsx  VideoPlayer.tsx  config.json  scene_registry.ts
docs/: README.md  agent_module.md  dependency_management.md  maintainer_guide.md  open_source_remediation_checklist.md  panel_system.md  quickstart_local.md  release_process.md  sandbox_system.md  security_model.md  workflow_node_system.md
docs/rfcs/: artifact_protocol.md  maintainability_refactor_plan.md  workflow_native_agent_refactor.md
docs/ui-mockups/: README.md
docs/ui/dashboard-progress-panel-icons/: README.md
docs/ui/report-progress-panel-icons/: README.md
docs/ui/workspace-assistant-data-icons/: README.md
scripts/: check.sh  security-scan.sh  smoke-compose.sh
