[project]
name = "deepeye-monorepo"
version = "0.1.0"
description = "DeepEye Monorepo Workspace"
requires-python = ">=3.11"
dependencies = [
    "deepeye-backend",
]

[tool.uv.sources]
deepeye = { workspace = true }
deepeye-backend = { workspace = true }

[tool.uv.workspace]
members = ["packages/core", "packages/backend"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
